# mersenne-pkc

./: Cargo.toml  README.md
report/: conclusion.tex  cryptosystem.tex  experiment.tex  introduction.tex  main.tex  preliminaries.tex  references.bib  tmp.tex
report/img/: results.txt
src/: bit_field.rs  bit_vector.rs  finite_ring.rs  lib.rs  mersenne_field.rs
